Expanded store, more filter ctrls

--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -1,6 +1,4 @@
-<hunt-filters>
-  <!-- i'm in the slot! -->
-</hunt-filters>
+<hunt-filters />
 
 @if (!topInView()) {
   <div class="fixed bottom-0 left-4 flex items-center justify-center m-4 p-3 bg-gray-300 rounded-md mx-auto">
