--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -1,7 +1,7 @@
 <ng-content></ng-content>
 
 <div class="flex mb-3 -mt-3">
-  <button data-modal-target="filtersModal" data-modal-toggle="filtersModal"
+  <button data-modal-target="filtersModal" data-modal-toggle="filtersModal" (click)="openFiltersModal()"
     class="bg-blue-600 hover:bg-blue-500 text-gray-100 mr-2 text-sm font-bold px-4 py-1 rounded-2xl inline-flex items-center">
     <ng-icon name="heroAdjustmentsHorizontal" class="mr-1 text-lg"></ng-icon>
     <span class="mr-1">Filters</span>
@@ -17,9 +17,9 @@
   </div>
 </div>
 
-<div id="filtersModal" tabindex="-1" aria-hidden="true"
-  class="bg-gray-900/75 fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
-  <div class="relative w-full max-w-2xl max-h-full" style="max-height: 90vh">
+<div id="filtersModal" tabindex="-1" aria-hidden="true" data-modal-backdrop="static"
+  class="bg-gray-900/90 backdrop:backdrop-blur-md fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+  <div class="relative w-full max-w-4xl max-h-full">
     <!-- Modal content -->
     <div class="relative rounded-lg shadow bg-gray-700">
       <!-- Modal header -->
@@ -27,26 +27,30 @@
         <h3 class="text-xl font-semibold text-gray-200 align-baseline">
           Filter Results
         </h3>
-        <div class="flex">
+        <div class="flex items-center">
+          <button data-modal-hide="filtersModal" type="button" (click)="apply()"
+            class="bg-blue-600 hover:bg-blue-500 text-gray-100 mr-2 text-sm font-bold px-4 py-2 rounded-2xl inline-flex items-center">
+            <ng-icon name="heroBolt" class="mr-1 text-lg"></ng-icon>
+            <span class="mr-1">Apply</span>
+            @if (filterCount() > 0) {
+              <span class="bg-gray-100 text-blue-700 px-3 rounded-full">
+                {{ filterCount() }}
+              </span>
+            }
+          </button>
           <button data-modal-hide="filtersModal" type="button"
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
-            Apply</button>
-          <button type="button"
-            class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center"
-            data-modal-hide="filtersModal">
-            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-            </svg>
-            <span class="sr-only">Close modal</span>
+            class="bg-gray-300 hover:bg-gray-200 text-gray-700 mr-2 text-sm font-bold px-4 py-2 rounded-2xl inline-flex items-center">
+              Cancel
           </button>
         </div>
       </div>
       <!-- Modal body -->
       <div class="p-6 space-y-6">
+        <!-- <span>{{ isLoading$ | async }}</span> -->
         <form [formGroup]="filterForm">
           <div class="flex">
-            <div class="flex flex-col h-80 max-h-screen justify-between w-1/2">
+            <div class="flex flex-col h-80 max-h-screen justify-between w-1/3">
+
               <span class="font-bold">WMAs</span>
               <div class="relative mb-1">
                 <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
@@ -57,25 +61,37 @@
                   </svg>
                 </div>
                 <input formControlName="wmaFilter" type="search"
-                  class="block w-full h-2 p-4 ps-10 text-xs text-gray-300 placeholder:text-gray-300 border border-gray-300 rounded-lg bg-gray-600 focus:ring-blue-500 focus:border-blue-500"
+                  class="block w-full h-2 p-4 ps-10 text-xs text-gray-300 placeholder:text-gray-300 border border-gray-300 rounded-md bg-gray-600 focus:ring-blue-500 focus:border-blue-500"
                   placeholder="Search WMAs by name...">
                 <div class="text-gray-300 h-2 absolute end-2 bottom-5 text-xs">
                   @if (filterForm.controls['wmaFilter'].value.length > 0) {
-                    <a class="cursor-pointer hover:text-white">
+                    <a class="cursor-pointer hover:text-white" (click)="clearSearch()">
                       <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
                     </a>
                   }
                 </div>
               </div>
-              <div class="overflow-y-auto border border-gray-400 pl-2 pt-2 rounded-lg h-full">
-                <div formArrayName="wmas" *ngFor="let wma of wmasFormArray.controls; let i = index"
+
+              <!-- WMAS -->
+              <div class="overflow-y-auto border border-gray-400 pt-2 rounded-md h-full">
+                @if (noFilteredWmasFound()) {
+                  <div class="w-full text-red-500 text-xs italic pl-2">
+                    No WMAs found matching your search criteria.
+                  </div>
+                }
+                <div formArrayName="wmas" *ngFor="let wma of (filterForm | formArray: 'wmas')?.controls; let i = index"
                   class="flex items-center">
-                  <input [formControlName]="i" [id]="i" type="checkbox"
-                    [ngClass]="{ 'hidden': filteredWmas[i].visible === false }"
-                    class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
-                  <label [for]="i" class="ml-2 block text-sm font-medium text-gray-300"
-                    [ngClass]="{ 'hidden': filteredWmas[i].visible === false }">
-                    {{ filteredWmas[i].name }}
+                  <label
+                    for="wma{{ i }}" class="ml-2 inline-block text-sm whitespace-nowrap align-baseline"
+                    [ngClass]="{
+                      'text-gray-300': (filterForm | formArray: 'wmas')?.at(i)?.value === false,
+                      'text-gawmas-yeller': (filterForm | formArray: 'wmas')?.at(i)?.value === true,
+                      'hidden': auxData.filteredWmas[i].visible === false
+                    }">
+                    <input [formControlName]="i" id="wma{{ i }}" type="checkbox"
+                      [ngClass]="{ 'hidden': auxData.filteredWmas[i].visible === false }"
+                      class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded inline-block mb-1">
+                        {{ auxData.filteredWmas[i].name }}
                   </label>
                 </div>
               </div>
@@ -83,15 +99,20 @@
               <div class="text-sm text-gawmas-yeller font-bold italic text-right">
                 {{ selectedWmasCount() }} selected</div>
               }
+
             </div>
-            <div class="flex flex-col h-80 max-h-screen justify-between w-1/2 pl-2">
+
+            <div class="flex flex-col h-80 max-h-screen justify-between w-1/3 pl-2">
+
+              <!-- SUCCESS RATE -->
               <div class="relative mb-6">
                 <label for="labels-range-input" class="font-bold text-gray-300">
                   Success Rate
-                  <span class="text-xs font-normal italic">
-                    (greater than or equal to
-                    <span class="font-bold text-gawmas-yeller text-sm">{{ filterForm.controls['successRate'].value + '%'
-                      }}</span>)
+                  <span class="text-sm font-normal italic">
+                    (&gt;&equals;
+                    <span class="font-bold text-gawmas-yeller text-sm">
+                      {{ filterForm.controls['successRate'].value + '%' }}
+                    </span>)
                   </span>
                 </label>
                 <input formControlName="successRate" id="labels-range-input" type="range" value="0" step="10" min="0"
@@ -99,15 +120,51 @@
                 <span class="text-xs text-gray-400 absolute start-0 -bottom-4 ml-2 mt-0 font-bold">0%</span>
                 <span class="text-xs text-gray-400 absolute end-0 -bottom-4 mr-1 mt-0 font-bold">100%+</span>
               </div>
-            </div>
-          </div>
-          <!-- Modal footer -->
-          <!-- <div class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600">
 
-            <button data-modal-hide="filtersModal" type="button"
-              class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
-              Cancel</button>
-          </div> -->
+              <!-- SEASONS -->
+              <span class="font-bold">Seasons</span>
+              <div class="overflow-y-auto border border-gray-400 pt-2 rounded-md h-full">
+                <div formArrayName="seasons" *ngFor="let s of (filterForm | formArray: 'seasons')?.controls; let i = index"
+                  class="flex items-center">
+                  <label
+                    for="s{{ i }}" class="ml-2 inline-block text-sm whitespace-nowrap align-baseline"
+                    [ngClass]="{
+                      'text-gray-300': (filterForm | formArray: 'seasons')?.at(i)?.value === false,
+                      'text-gawmas-yeller': (filterForm | formArray: 'seasons')?.at(i)?.value === true
+                    }">
+                    <input [formControlName]="i" id="s{{ i }}" type="checkbox"
+                      class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded inline-block mb-1">
+                        {{ auxData.seasons[i].season }}
+                  </label>
+                </div>
+              </div>
+
+              <span class="font-bold mt-2">Weapons</span>
+              <div class="overflow-y-auto border border-gray-400 pt-2 rounded-md h-full">
+                <div formArrayName="weapons" *ngFor="let w of (filterForm | formArray: 'weapons')?.controls; let i = index"
+                  class="flex items-center">
+                  <label
+                    for="w{{ i }}" class="ml-2 inline-block text-sm whitespace-nowrap align-baseline"
+                    [ngClass]="{
+                      'text-gray-300': (filterForm | formArray: 'weapons')?.at(i)?.value === false,
+                      'text-gawmas-yeller': (filterForm | formArray: 'weapons')?.at(i)?.value === true
+                    }">
+                    <input [formControlName]="i" id="w{{ i }}" type="checkbox"
+                      class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded inline-block mb-1">
+                        {{ auxData.weapons[i].name }}
+                  </label>
+                </div>
+              </div>
+
+            </div>
+            <div class="flex flex-col h-80 max-h-screen justify-between w-1/3 pl-2">
+              <span class="font-bold mt-2">Weather</span>
+              <!-- <div class="overflow-y-auto border border-gray-400 pt-2 rounded-lg h-full">
+                {{ filterForm.value | json }}
+              </div> -->
+            </div>
+
+          </div>
         </form>
       </div>
     </div>
