--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -1,33 +1,7 @@
 <hunt-filters />
 
-@if (!topInView()) {
-  <div class="fixed bottom-0 left-4 flex items-center justify-center m-4 p-3 bg-gray-300 rounded-md mx-auto">
-    @if (isLoading$ | async) {
-      <div class="flex text-sm items-center">
-        <div>
-          <svg class="w-6 h-6 fill-blue-900 spinner"
-            viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
-            <circle class="spinner_b2T7" cx="4" cy="12" r="3"/>
-            <circle class="spinner_b2T7 spinner_YRVV" cx="12" cy="12" r="3"/>
-            <circle class="spinner_b2T7 spinner_c9oY" cx="20" cy="12" r="3"/>
-          </svg>
-        </div>
-        <div class="text-blue-900">Loading more results ...</div>
-      </div>
-    } @else {
-      <div class="text-blue-900 text-sm flex items-center">
-        <div class="mr-2 text-l">
-          <ng-icon name="heroBarsArrowUp"></ng-icon>
-        </div>
-        <div><a (click)="scrollTop()" class="cursor-pointer hover:underline">Back to Top</a></div>
-      </div>
-    }
-  </div>
-}
 <!-- <p>{{ filter$ | async | json }}</p> -->
-<table class="w-full text-sm text-left bg-gray-900 text-gray-400 table-fixed">
-  <!-- <caption class="text-gray-300 text-sm caption-top text-left">
-    {{ resultCount }} Results</caption> -->
+<table class="w-[100%] text-sm text-left bg-gray-900 text-gray-400 mb-12">
   <thead class="text-xs text-gray-700 uppercase bg-gray-800 border-gray-400 border-b-2 border-t-1">
     <tr>
       <th scope="col" class="px-6 py-3 w-20 text-gray-400">WMA</th>
