--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -1,54 +1,143 @@
 <hunt-filters />
 
-<!-- <p>{{ filter$ | async | json }}</p> -->
-<table class="w-[100%] text-sm text-left bg-gray-900 text-gray-400 mb-12">
-  <thead class="text-xs text-gray-700 uppercase bg-gray-800 border-gray-400 border-b-2 border-t-1">
-    <tr>
-      <th scope="col" class="px-6 py-3 w-20 text-gray-400">WMA</th>
-      <th scope="col" class="px-6 py-3 w-20 text-gray-400">Season</th>
-      <th scope="col" class="px-6 py-3 w-20 text-gray-400">Dates</th>
-      <th scope="col" class="px-6 py-3 w-20 text-gray-400">Results</th>
-      <th scope="col" class="px-6 py-3 w-20 text-gray-400">Weather</th>
-    </tr>
-  </thead>
-  <tbody>
-    @if ((hunts$ | async); as hunts) {
-      @for (hunt of hunts; track hunt.id) {
-        <tr class="border-b bg-gray-800 border-gray-600">
-          <th scope="row" class="px-6 py-4 align-top font-bold text-gray-100 bg-gray-800">
-            {{ hunt.wmaName }}
-          </th>
-          <td class="px-6 py-4 align-top bg-gray-800">
-            <div>{{ hunt.season }}</div>
-            <div class="font-bold">{{ hunt.weapon }}</div>
-            <div>{{ hunt.details }}</div>
-            @if (hunt.quota) { <div>{{ hunt.quota }}</div> }
-          </td>
-          <td class="px-6 py-4 align-top bg-gray-800">
-            {{ hunt.startDate | date: 'MM/dd' }} - {{ hunt.endDate | date: 'MM/dd' }}
-          </td>
-          <td class="px-6 py-4 align-top bg-gray-800">
-            <div>Hunters: {{ hunt.hunterCount }}</div>
-            <div>Bucks: {{ hunt.bucks }}</div>
-            <div>Does: {{ hunt.does }}</div>
-            <div class="font-bold">
-              Success Rate: <span class="{{ hunt | successRateColor }}">
-                {{ hunt | successRate }}%</span>
-            </div>
-          </td>
-          <td class="px-6 py-4 align-top bg-gray-800">
-            huntId: {{ hunt.id }}
-          </td>
-        </tr>
-      } @empty {
-        <tr class="bg-gray-800 border-b border-gray-700">
-          <td colspan="5" class="px-6 py-4 text-center text-red-500">
-            <div class="mt-2 text-sm flex items-center italic">
-              <ng-icon name="heroFaceFrown" class="mr-1"></ng-icon> No results found.
-            </div>
-          </td>
-        </tr>
+@if (screenWidth() > 900) {
+  <table class="w-[100%] md:w-[90%] text-sm text-left text-gray-300 mb-12">
+    <thead class="text-xs text-gray-400 uppercase bg-gray-800 border-gray-400 border-b-2 border-t-1">
+      <tr>
+        <th scope="col" class="px-6 py-3">WMA &amp; Season</th>
+        <th scope="col" class="px-6 py-3 w-[200px]">Dates</th>
+        <th scope="col" class="px-6 py-3 w-[150px]">Results</th>
+        <th scope="col" class="px-6 py-3 w-[300px]">Weather</th>
+      </tr>
+    </thead>
+    <tbody>
+      @if ((hunts$ | async); as hunts) {
+        @for (hunt of hunts; track hunt.id) {
+          <tr class="border-b bg-gray-800 border-gray-600">
+            <td class="px-6 py-4 align-top bg-gray-800">
+              <div class="flex flex-wrap mb-1">
+                <div class="text-white font-bold uppercase">
+                  {{ hunt.wmaName }}
+                </div>
+                <div class="font-semibold uppercase text-gray-400 text-sm ml-1">&bullet; {{ hunt.weapon }}</div>
+              </div>
+              <span class="text-gray-300 border border-gray-600 text-sm font-medium mb-1 px-2.5 py-0.5 rounded">
+                {{ hunt.season }}
+              </span>
+              <div class="mt-1">{{ hunt.details }}</div>
+              @if (hunt.quota) { <div>{{ hunt.quota }}</div> }
+            </td>
+            <td class="px-6 py-4 align-top bg-gray-800">
+              <div>
+                <span class="uppercase text-xs font-semibold text-gray-400">Start:</span>
+                <span class="mx-1">{{ hunt.startDate | date: 'MM/dd/yyy' }}</span>
+              </div>
+              <div>
+                <span class="uppercase text-xs font-semibold text-gray-400">End:</span>
+                <span class="mx-1">{{ hunt.endDate | date: 'MM/dd/yyy' }}</span>
+              </div>
+            </td>
+            <td class="px-6 py-4 align-top bg-gray-800">
+              <div>
+                <span class="uppercase text-xs font-semibold text-gray-400">Hunters:</span>
+                <span class="mx-1">{{ hunt.hunterCount }}</span>
+              </div>
+              <div>
+                <span class="uppercase text-xs font-semibold text-gray-400">Bucks:</span>
+                <span class="mx-1">{{ hunt.bucks }}</span>
+              </div>
+              <div>
+                <span class="uppercase text-xs font-semibold text-gray-400">Does:</span>
+                <span class="mx-1">{{ hunt.does }}</span>
+              </div>
+              <div class="font-semibold text-white uppercase text-xs">
+                Success Rate:
+              </div>
+              <div class="{{ hunt | successRateColor }} font-bold">
+                {{ hunt | successRate }}&percnt;
+              </div>
+            </td>
+            <td class="px-6 py-4 align-top border-l border-gray-600">
+              hunt.id: {{ hunt.id }}
+            </td>
+          </tr>
+        } @empty {
+          <tr class="bg-gray-800 border-b border-gray-700">
+            <td colspan="4" class="px-6 py-4 text-center text-red-500">
+              <div class="mt-2 text-sm flex items-center italic">
+                <ng-icon name="heroFaceFrown" class="mr-1"></ng-icon> No results found.
+              </div>
+            </td>
+          </tr>
+        }
       }
-    }
-  </tbody>
-</table>
+    </tbody>
+  </table>
+} @else {
+  <table class="w-[100%] md:w-[90%] text-sm text-left text-gray-300 mb-12 bg-gray-800">
+    <thead class="sr-only">
+      <tr>
+        <th scope="col" class="px-6 py-3">&nbsp;</th>
+        <th scope="col" class="px-6 py-3 w-[135px]">Results</th>
+        <th scope="col" class="px-6 py-3 w-[300px]">Weather</th>
+      </tr>
+    </thead>
+    <tbody>
+      @if ((hunts$ | async); as hunts) {
+        @for (hunt of hunts; track hunt.id) {
+          <tr>
+            <td colspan="2" class="px-2 pt-2 align-top">
+              <div class="flex items-center">
+                <div class="text-white font-bold uppercase">
+                  {{ hunt.wmaName }}
+                </div>
+                <div class="font-semibold ml-1 uppercase text-gray-400">&bullet; {{ hunt.weapon }}</div>
+              </div>
+              <div class="flex items-center">
+                <span class="text-gray-300 border border-gray-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded">
+                  {{ hunt.season }}
+                </span>
+                <span class="text-xs">
+                  {{ hunt.startDate | date: 'MM/dd/yyyy' }} - {{ hunt.endDate | date: 'MM/dd/yyyy' }}
+                </span>
+              </div>
+            </td>
+          </tr>
+          <tr class="border-b border-gray-600">
+            <td class="text-xs px-2 pb-2 align-top max-w-16">
+              <div class="flex items-center">
+                <div class="uppercase text-gray-400 font-semibold text-xs">Hunters:</div>
+                <div class="mx-1">{{ hunt.hunterCount }}</div>
+              </div>
+              <div class="flex items-center">
+                <div class="uppercase text-gray-400 font-semibold text-xs">Bucks:</div>
+                <div class="mx-1">{{ hunt.bucks }}</div>
+              </div>
+              <div class="flex items-center">
+                <div class="uppercase text-gray-400 font-semibold text-xs">Does:</div>
+                <div class="mx-1">{{ hunt.does }}</div>
+              </div>
+              <div class="font-bold text-white uppercase text-xs">
+                Success Rate:
+              </div>
+              <div class="{{ hunt | successRateColor }} font-bold">
+                {{ hunt | successRate }}&percnt;
+              </div>
+            </td>
+            <td class="px-2 border-t border-l border-gray-600 align-top">
+               hunt.id: {{ hunt.id }}
+            </td>
+          </tr>
+        } @empty {
+          <tr class="bg-gray-800 border-b border-gray-700">
+            <td colspan="3" class="px-6 py-4 text-center text-red-500">
+              <div class="mt-2 text-sm flex items-center italic">
+                <ng-icon name="heroFaceFrown" class="mr-1"></ng-icon> No results found.
+              </div>
+            </td>
+          </tr>
+        }
+      }
+    </tbody>
+  </table>
+}
