--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -1,7 +1,7 @@
 <hunt-filters />
 
-@if (screenWidth() > 900) {
-  <table class="w-[100%] md:w-[90%] text-sm text-left text-gray-300 mb-12">
+<table class="w-[99%] md:w-[85%] text-sm text-left text-gray-300 -pt-2">
+  @if (screenWidth() > 1000) {
     <thead class="text-xs text-gray-400 uppercase bg-gray-800 border-gray-400 border-b-2 border-t-1">
       <tr>
         <th scope="col" class="px-6 py-3">WMA &amp; Season</th>
@@ -15,17 +15,21 @@
         @for (hunt of hunts; track hunt.id) {
           <tr class="border-b bg-gray-800 border-gray-600">
             <td class="px-6 py-4 align-top bg-gray-800">
-              <div class="flex flex-wrap mb-1">
+              <div class="flex flex-wrap items-center mb-1">
                 <div class="text-white font-bold uppercase">
                   {{ hunt.wmaName }}
                 </div>
                 <div class="font-semibold uppercase text-gray-400 text-sm ml-1">&bullet; {{ hunt.weapon }}</div>
               </div>
-              <span class="text-gray-300 border border-gray-600 text-sm font-medium mb-1 px-2.5 py-0.5 rounded">
+              <span class="text-gray-300 border border-gray-600 text-sm font-medium mb-1 px-2.5 py-0.5 rounded-full">
                 {{ hunt.season }}
               </span>
+              @if (hunt.quota) {
+                <span class="bg-green-900 text-green-300 text-sm font-medium me-2 px-2.5 py-0.5 rounded-full ml-1">
+                  <span class="text-xs uppercase">Quota:</span> <span>{{ hunt.quota }}</span>
+                </span>
+              }
               <div class="mt-1">{{ hunt.details }}</div>
-              @if (hunt.quota) { <div>{{ hunt.quota }}</div> }
             </td>
             <td class="px-6 py-4 align-top bg-gray-800">
               <div>
@@ -63,18 +67,24 @@
           </tr>
         } @empty {
           <tr class="bg-gray-800 border-b border-gray-700">
-            <td colspan="4" class="px-6 py-4 text-center text-red-500">
-              <div class="mt-2 text-sm flex items-center italic">
-                <ng-icon name="heroFaceFrown" class="mr-1"></ng-icon> No results found.
+            <td colspan="4" class="px-8 py-8 text-gawmas-yeller">
+              <div class="flex justify-center">
+                <div class="mt-2 flex items-center italic">
+                  <ng-icon name="heroFaceFrown" class="mr-1"></ng-icon>
+                  <span class="sr-only">Sad face icon</span>
+                  <div>
+                    <span class="font-medium">No results found</span>.
+                  </div>
+                </div>
               </div>
             </td>
           </tr>
         }
       }
     </tbody>
-  </table>
+
 } @else {
-  <table class="w-[100%] md:w-[90%] text-sm text-left text-gray-300 mb-12 bg-gray-800">
+
     <thead class="sr-only">
       <tr>
         <th scope="col" class="px-6 py-3">&nbsp;</th>
@@ -85,25 +95,30 @@
     <tbody>
       @if ((hunts$ | async); as hunts) {
         @for (hunt of hunts; track hunt.id) {
-          <tr>
+          <tr class="bg-gray-800">
             <td colspan="2" class="px-2 pt-2 align-top">
-              <div class="flex items-center">
+              <div class="flex flex-wrap items-center">
                 <div class="text-white font-bold uppercase">
                   {{ hunt.wmaName }}
                 </div>
-                <div class="font-semibold ml-1 uppercase text-gray-400">&bullet; {{ hunt.weapon }}</div>
+                <div class="font-semibold ml-1 uppercase text-xs text-gray-400">&bullet; {{ hunt.weapon }}</div>
               </div>
-              <div class="flex items-center">
-                <span class="text-gray-300 border border-gray-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded">
+              <div class="flex items-center text-xs">
+                <span class="text-gray-300 border border-gray-600 font-medium me-2 px-2.5 py-0.5 rounded-full">
                   {{ hunt.season }}
                 </span>
-                <span class="text-xs">
+                @if (hunt.quota) {
+                  <span class="bg-green-900 text-green-300 font-medium me-2 px-2.5 py-0.5 flex items-center ml-1 rounded-full">
+                    <span class="text-xs uppercase">Quota:</span> <span>{{ hunt.quota }}</span>
+                  </span>
+                }
+                <span class="">
                   {{ hunt.startDate | date: 'MM/dd/yyyy' }} - {{ hunt.endDate | date: 'MM/dd/yyyy' }}
                 </span>
               </div>
             </td>
           </tr>
-          <tr class="border-b border-gray-600">
+          <tr class="bg-gray-800 border-b border-gray-600">
             <td class="text-xs px-2 pb-2 align-top max-w-16">
               <div class="flex items-center">
                 <div class="uppercase text-gray-400 font-semibold text-xs">Hunters:</div>
@@ -130,14 +145,27 @@
           </tr>
         } @empty {
           <tr class="bg-gray-800 border-b border-gray-700">
-            <td colspan="3" class="px-6 py-4 text-center text-red-500">
-              <div class="mt-2 text-sm flex items-center italic">
-                <ng-icon name="heroFaceFrown" class="mr-1"></ng-icon> No results found.
+            <td colspan="3" class="px-8 py-8 text-gawmas-yeller flex justify-center">
+              <div class="mt-2 flex items-center italic">
+                <ng-icon name="heroFaceFrown" class="mr-1"></ng-icon>
+                <span class="sr-only">Sad face icon</span>
+                <div>
+                  <span class="font-medium">No results found</span>.
+                </div>
               </div>
             </td>
           </tr>
         }
       }
     </tbody>
-  </table>
+  }
+</table>
+
+@if ((isEndOfResults$ | async) && (hunts$ | async)!.length > 0) {
+  <div class="w-[99%] md:w-[85%] flex justify-center mt-1 mb-12">
+    <div class="flex items-center text-gawmas-yeller text-sm">
+      <ng-icon name="heroDocumentCheck" class="mr-1"></ng-icon>
+      <span class="italic">End of results</span>
+    </div>
+  </div>
 }
