--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,5 +21,34 @@
   }
 }
 
+.toggle {
+  @apply
+    w-11
+    h-6
+    bg-gray-300
+    after:content-['']
+    after:absolute
+    after:top-[2px]
+    after:start-[2px]
+    after:bg-white
+    after:border-gray-300
+    after:border
+    after:rounded-full
+    after:h-5 after:w-5
+    after:transition-all
+    border-gray-600
+    peer-checked:bg-blue-500
+}
+
+body {
+  overflow-x: hidden;
+  font-family: '"Raleway"', '"HelveticaNeue"', '"Helvetica Neue"', 'Helvetica', 'Arial', 'sans-serif';
+}
+
+.scroll-container {
+  max-width: 100%; /* Set the maximum width as needed */
+  overflow-x: auto; /* Enable horizontal scrolling */
+}
+
 @tailwind utilities;
 
